# Notebook_LM_CrewAI

./: .gitignore  README.md  pyproject.toml
src/guide_generator_flow/: main.py
src/guide_generator_flow/crews/research_crew/: research_crew.py
src/guide_generator_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
src/guide_generator_flow/crews/writing_crew/: writing_crew.py
src/guide_generator_flow/crews/writing_crew/config/: agents.yaml  tasks.yaml
