[project]
name = "guide_generator_flow"
version = "0.1.0"
description = "guide_generator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
kickoff = "guide_generator_flow.main:kickoff"
run_crew = "guide_generator_flow.main:kickoff"
plot = "guide_generator_flow.main:plot"
run_with_trigger = "guide_generator_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
